--- a/OrgStructure/pom.xml
+++ b/OrgStructure/pom.xml
@@ -10,8 +10,8 @@
         <version>${platform.version}</version>
     </parent>
 
-    <groupId>ru.it.lecm.orgStructure</groupId>
-    <artifactId>orgStructure</artifactId>
+    <groupId>ru.it.lecm.orgstructure</groupId>
+    <artifactId>orgstructure</artifactId>
     <version>${platform.version}</version>
     <packaging>pom</packaging>
     <name>OrgStructure</name>
