--- a/OrgStructure/share/pom.xml
+++ b/OrgStructure/share/pom.xml
@@ -18,13 +18,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>ru.it.lecm.orgStructure</groupId>
-        <artifactId>orgStructure</artifactId>
+        <groupId>ru.it.lecm.orgstructure</groupId>
+        <artifactId>orgstructure</artifactId>
         <version>${platform.version}</version>
     </parent>
 
-    <groupId>ru.it.lecm.orgStructure</groupId>
-    <artifactId>orgStructure-share</artifactId>
+    <groupId>ru.it.lecm.orgstructure</groupId>
+    <artifactId>orgstructure-share</artifactId>
     <packaging>amp</packaging>
     <name>OrgStructure Share</name>
 	<!--
