прямое указание версии
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@20 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/OrgStructure/share/pom.xml
+++ b/OrgStructure/share/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>ru.it.lecm.orgstructure</groupId>
         <artifactId>orgstructure</artifactId>
-        <version>${platform.version}</version>
+        <version>1.0</version>
     </parent>
 
     <groupId>ru.it.lecm.orgstructure</groupId>
@@ -37,7 +37,7 @@
 		below as the AMP module version. Instead we use the
 		buildnumber-maven-plugin. This requires a scm connection.
 	-->
-	<version>${platform.version}</version>
+	<version>1.0</version>
 	<description>OrgStructure Share project</description>
 	<properties>
 		<module.log.level>debug</module.log.level>
