--- a/OrgStructure/pom.xml
+++ b/OrgStructure/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>ru.it.lecm</groupId>
         <artifactId>platform</artifactId>
-        <version>${platform.version}</version>
+        <version>1.0</version>
     </parent>
 
     <groupId>ru.it.lecm.orgstructure</groupId>
     <artifactId>orgstructure</artifactId>
-    <version>${platform.version}</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
     <name>OrgStructure</name>
 
