--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
        below as the AMP module version. Instead we use the
        buildnumber-maven-plugin. This requires a scm connection.
    -->
-    <version>${platform.version}</version>
+    <version>1.0</version>
     <description>Logic ECM Platform</description>
     <repositories>
         <repository>
