--- a/OrgStructure/share/pom.xml
+++ b/OrgStructure/share/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>ru.it.lecm.orgstructure</groupId>
         <artifactId>orgstructure</artifactId>
-        <version>1.0</version>
+        <version>0.1.0</version>
     </parent>
 
     <groupId>ru.it.lecm.orgstructure</groupId>
@@ -37,7 +37,7 @@
 		below as the AMP module version. Instead we use the
 		buildnumber-maven-plugin. This requires a scm connection.
 	-->
-	<version>1.0</version>
+	<version>0.1.0</version>
 	<description>OrgStructure Share project</description>
 	<properties>
 		<module.log.level>debug</module.log.level>
@@ -72,7 +72,11 @@
             <plugin>
 				<artifactId>maven-nosnapshot-plugin</artifactId>
 				<groupId>org.alfresco.maven</groupId>
-			</plugin>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+            </plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
