--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
        below as the AMP module version. Instead we use the
        buildnumber-maven-plugin. This requires a scm connection.
    -->
-    <version>1.0</version>
+    <version>0.1.0</version>
     <description>Logic ECM Platform</description>
     <repositories>
         <repository>
@@ -71,12 +71,18 @@
         <env>local</env>
         <alfresco.version>4.0.e</alfresco.version>
         <spring.version>3.0.5.RELEASE</spring.version>
-        <platform.version>1.0</platform.version>
+        <platform.version>0.1.0</platform.version>
     </properties>
 
     <modules>
         <module>OrgStructure</module>
     </modules>
+    <scm>
+        <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
+        <!--<developerConnection>scm:svn:https://${user.name}@domain.com/svn/trunk/</developerConnection>-->
+        <url>https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</url>
+    </scm>
+
     <!--
        need to list these as a provided so that Maven doesn't download them
        and include them in the AMP, they are provided by Alfresco
@@ -162,6 +168,27 @@
                             </goals>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>buildnumber-maven-plugin</artifactId>
+                    <version>1.1</version>
+                    <executions>
+                        <execution>
+                            <phase>validate</phase>
+                            <goals>
+                                <goal>create</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <!--<format>{0,date,yyyy-MM-dd HH:mm:ss}</format>-->
+                        <!--<items>-->
+                            <!--<item>timestamp</item>-->
+                        <!--</items>-->
+                        <doCheck>false</doCheck>
+                        <doUpdate>false</doUpdate>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
