--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
 
     <modules>
         <module>OrgStructure</module>
+        <module>expertSearchClient</module>
     </modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
@@ -92,6 +93,12 @@
             <dependency>
                 <groupId>org.alfresco</groupId>
                 <artifactId>alfresco-core</artifactId>
+                <version>${alfresco.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.alfresco</groupId>
+                <artifactId>alfresco-data-model</artifactId>
                 <version>${alfresco.version}</version>
                 <scope>provided</scope>
             </dependency>
@@ -133,6 +140,24 @@
                       <type>amp</type> </dependency>
                   -->
             <!-- Don't add here amp dependencies as it will break amp packaging -->
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>1.4</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>xerces</groupId>
+                <artifactId>xercesImpl</artifactId>
+                <version>2.8.0</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>20070829</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
