изменены названия модулей
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@35 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/expertSearchClient/pom.xml
+++ b/expertSearchClient/pom.xml
@@ -16,7 +16,7 @@
     <name>GetExperts</name>
 
     <modules>
-        <module>expertSearch-repo</module>
-        <module>expertSearch-share</module>
+        <module>repo</module>
+        <module>share</module>
     </modules>
 </project>
