--- a/expertSearchClient/share/pom.xml
+++ b/expertSearchClient/share/pom.xml
@@ -17,16 +17,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>ru.it.lecm.experts</groupId>
         <artifactId>experts</artifactId>
         <version>0.1.0</version>
     </parent>
 
-    <artifactId>experts-repo</artifactId>
+    <artifactId>share</artifactId>
     <packaging>amp</packaging>
-    <name>GetExperts Repo</name>
+    <name>GetExperts Share</name>
     <!--
        An Alfresco version number must be of the form 1.2.3.4. Using
        1.0-SNAPSHOT as the AMP version will create an exception. See
@@ -37,7 +36,7 @@
        below as the AMP module version. Instead we use the
        buildnumber-maven-plugin. This requires a scm connection.
    -->
-    <description>GetExperts Repo project</description>
+    <description>GetExperts Share project</description>
     <properties>
         <module.log.level>debug</module.log.level>
     </properties>
@@ -47,28 +46,8 @@
    -->
     <dependencies>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>xerces</groupId>
-            <artifactId>xercesImpl</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.alfresco</groupId>
-            <artifactId>alfresco-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.alfresco</groupId>
-            <artifactId>alfresco-data-model</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.alfresco</groupId>
-            <artifactId>alfresco-repository</artifactId>
+            <artifactId>alfresco-share</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -80,15 +59,6 @@
         </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
-    <!--
-       The scm is required for the buildnumber-maven-plugin which is required
-       for AMP version numbering
-   -->
-    <scm>
-        <connection>scm:svn:http://domain.com/svn/trunk/</connection>
-        <developerConnection>scm:svn:https://${user.name}@domain.com/svn/trunk/</developerConnection>
-        <url>http://domain.com/svn/trunk/</url>
-    </scm>
 
     <build>
         <plugins>
@@ -113,6 +83,10 @@
                 <artifactId>maven-amp-plugin</artifactId>
             </plugin>
         </plugins>
+        <!--
+          Copies and filters resources in build folder so maven-amp-plugin can
+          pick them up
+      -->
         <resources>
             <resource>
                 <filtering>true</filtering>
@@ -121,17 +95,11 @@
                     <exclude>**README-*</exclude>
                 </excludes>
             </resource>
-            <!--
-             Copies and filters AMP config in the proper package
-             'alfresco/module/${project.artifactId}' so to enforce full module
-             naming single sourcing from POM properties
-         -->
             <resource>
                 <filtering>true</filtering>
-                <directory>src/main/config</directory>
-                <targetPath>alfresco/module/${project.artifactId}</targetPath>
+                <directory>src/main/java</directory>
                 <excludes>
-                    <exclude>**README-*</exclude>
+                    <exclude>**.java</exclude>
                 </excludes>
             </resource>
         </resources>
