получение buildNumber для svn 1.7
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@36 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,9 @@
                         <!--</items>-->
                         <doCheck>false</doCheck>
                         <doUpdate>false</doUpdate>
+                        <providerImplementations>
+                            <svn>javasvn</svn>
+                        </providerImplementations>
                     </configuration>
                 </plugin>
                 <plugin>
