--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -33,7 +33,7 @@
     <!-- oOo SINGLE POINT OF CONFIGURATION FOR COMMON ALFRESCO PROPERTIES oOo -->
 	<properties>
         <!-- Build environment ==> src/main/properties/<env>/alfresco-global.properties is loaded -->
-        <env>local</env>
+        <!--<env>local</env>-->
         <!-- Webapp packaged name -->
         <webapp.name>alfresco</webapp.name>
         <!--
@@ -134,9 +134,9 @@
 			In certain cases we do build time filtering with the single sourcing
 			alfresco-global.properties
 		-->
-		<filters>
-			<filter>${project.basedir}/src/main/properties/${env}/alfresco-global.properties</filter>
-		</filters>
+		<!--<filters>-->
+			<!--<filter>${project.basedir}/src/main/properties/${env}/alfresco-global.properties</filter>-->
+		<!--</filters>-->
 		<!--
 			Default profile to build as an Alfresco extension - resources are
 			copied into classpath
@@ -361,316 +361,5 @@
 			</plugin>
 		</plugins>
 	</reporting>
-	<!--
-		| Configured to deploy on SS public repository ATM. | You'd need a
-		valid uid/pwd in our repo |
-	-->
-	<distributionManagement>
-		<!--
-			| | Enable this repo in case of publicly redistributable artifacts
-			<repository> <id>yourcompany</id>
-			<url>scp://yourcompany/var/maven2</url> </repository>
-			<distributionManagement> <site> <id>yourcompany-site</id>
-			<url>scp://yourcompany/var/maven2-sites</url> </site>
-		-->
-	</distributionManagement>
 
-	<!-- 
-		| Build Profiles
-	-->
-	<profiles>
-		<!--
-			| Profile to automatically restore export files committed under |
-			"tools/export/<restoreVersion>/export_*.[acp,xml]" and the
-			restore-context.xml. | Gets automatically activated specifiying a
-			value for the property | restoreVersion which maps to the name of the
-			folder. | NB: In order this to work you *MUST* export your full repo
-			with "export" package name
-		-->
-		<profile>
-			<id>restore</id>
-			<activation>
-				<property>
-					<name>restoreVersion</name>
-				</property>
-			</activation>
-			<build>
-				<defaultGoal>package</defaultGoal>
-				<resources>
-					<resource>
-						<directory>src/main/resources</directory>
-						<includes>
-							<include>**/restore-*.xml</include>
-						</includes>
-					</resource>
-					<resource>
-						<directory>tools/export/${restoreVersion}</directory>
-						<includes>
-							<include>**</include>
-						</includes>
-						<targetPath>alfresco/extension/restore</targetPath>
-					</resource>
-				</resources>
-			</build>
-		</profile>
-		<!--
-			Profile for deploying (only locally , due to
-			http://jira.codehaus.org/browse/CARGO-416) on jboss. | | FIXME: Add
-			<dependencies> override in order to have jboss specific
-			alfresco-*-jboss.war (e.g no log4j.properties and log4j jar) | being
-			substituted as a depenendency, and avoid log4j classCasts |
-		-->
-		<profile>
-			<id>jboss</id>
-			<!--
-				| By default the src/main/properties/local/alfresco-global.properties
-				uses the property "alfresco.data.location" to specify where |
-				alf_data gets created and "alfresco.db.name" for the database name.
-				| For local jboss deployment default creation dir (alf_data) is
-				under appserver $JBOSS_HOME/bin directory (as location is specified
-				relatively to | run dir) | | Empty log dir creates file alfresco.log
-				in appserver default dir. You can also specify a meaningful log
-				directory for the server | (add a trailing slash, e.g.
-				'/var/log/alfresco/' ) | | NB: Remember to grant appropriate
-				permissions on database you specify here by running the script found
-				in tools/mysql/[jetty/tomcat/jboss] | sql scripts (after editing
-				them), or run those you find in
-				target/classes/tools/[db_remove,db_setup].sql which are already
-				filtered according to | ' alfresco.db.name ' property. |
-			-->
-			<properties>
-				<alfresco.data.location>./alf_data</alfresco.data.location>
-				<alfresco.db.name>alf_jboss</alfresco.db.name>
-				<log.dir></log.dir>
-			</properties>
-			<build>
-				<defaultGoal>cargo:deploy</defaultGoal>
-				<resources>
-					<resource>
-						<directory>src/main/resources</directory>
-						<excludes>
-							<exclude>**/restore-context.xml</exclude>
-							<!--<exclude>**/ldap-*.xml</exclude>-->
-						</excludes>
-					</resource>
-					<resource>
-						<directory>src/main/resources</directory>
-						<includes>
-							<include></include>
-						</includes>
-						<filtering>true</filtering>
-					</resource>
-				</resources>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.cargo</groupId>
-						<artifactId>cargo-maven2-plugin</artifactId>
-						<configuration>
-							<container>
-								<containerId>jboss4x</containerId>
-								<type>remote</type>
-							</container>
-							<configuration>
-								<type>runtime</type>
-								<properties>
-									<cargo.servlet.port>8080</cargo.servlet.port>
-								</properties>
-							</configuration>
-							<deployer>
-								<type>remote</type>
-								<deployables>
-									<deployable>
-										<groupId>${project.groupId}</groupId>
-										<artifactId>${project.artifactId}</artifactId>
-										<type>war</type>
-									</deployable>
-								</deployables>
-							</deployer>
-						</configuration>
-					</plugin>
-					<!-- log4j.properties is excluded from source and dependencies -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-war-plugin</artifactId>
-                        <version>2.1.1</version>
-						<configuration>
-							<archiveClasses>false</archiveClasses>
-							<webappDirectory>target/${webapp.name}</webappDirectory>
-							<dependentWarExcludes>**/log4j.properties,**/lib/log4j*.jar,log4j.properties</dependentWarExcludes>
-							<warSourceExcludes>**/log4j.properties,WEB-INF/classes/tools</warSourceExcludes>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<!-- 
-			| Profile for deploying on tomcat 5.x
-			|
-			|
-		-->
-		<profile>
-			<id>tomcat</id>
-			<!--
-				| By default the src/main/properties/local/alfresco-global.properties
-				uses the property "alfresco.data.location" to specify where |
-				alf_data gets created. | For tomcat deployment default creation dir
-				(alf_data) is under appserver $CATALINA_HOME/bin directory (as
-				location is specified relatively to | run dir) and db is
-				configurable likewhise. | Empty log dir creates file alfresco.log in
-				appserver default dir. You can also specify a meaningful log
-				directory for the server | (add a trailing slash, e.g.
-				'/var/log/alfresco/' ) | | NB: Remember to grant appropriate
-				permissions on database you specify here by running the script found
-				in tools/mysql/[jetty/tomcat/jboss] | mysql scripts (properly
-				edited) or those you find in target/tools/[db_remove,db_setup].sql
-				which are already filtered according to | ' alfresco.db.name '
-				property |
-			-->
-			<properties>
-				<alfresco.data.location>./alf_data</alfresco.data.location>
-				<alfresco.db.name>alf_tomcat</alfresco.db.name>
-				<log.dir></log.dir>
-			</properties>
-			<build>
-				<defaultGoal>package</defaultGoal>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.cargo</groupId>
-						<artifactId>cargo-maven2-plugin</artifactId>
-						<configuration>
-							<container>
-								<containerId>tomcat5x</containerId>
-								<type>remote</type>
-							</container>
-							<!-- Configure here your Tomcat server manager credentials -->
-							<configuration>
-								<type>runtime</type>
-								<properties>
-									<cargo.remote.username>tomcat</cargo.remote.username>
-									<cargo.remote.password>tomcat</cargo.remote.password>
-									<cargo.servlet.port>8080</cargo.servlet.port>
-								</properties>
-							</configuration>
-							<deployer>
-								<type>remote</type>
-								<deployables>
-									<deployable>
-										<artifactId>${project.artifactId}</artifactId>
-										<type>war</type>
-										<properties>
-											<context>/${webapp.name}</context>
-										</properties>
-									</deployable>
-								</deployables>
-							</deployer>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<!-- -Pinitialize : boostraps the db (only to be used the 1st run)  -->
-		<profile>
-			<id>initialize</id>
-			<build>
-				<plugins>
-					<!-- Cleans the alf_data folder and logs-->
-					<plugin>
-						<artifactId>maven-clean-plugin</artifactId>
-						<executions>
-							<execution>
-							  <id>clean-execution</id>
-								<phase>generate-resources</phase>
-								<goals>
-									<goal>clean</goal>
-								</goals>
-								<configuration>
-									<filesets>
-										<fileset>
-											<directory>${alfresco.data.location}</directory>
-											<includes>
-												<include>**/*</include>
-											</includes>
-										</fileset>
-										<fileset>
-											<directory>.</directory>
-											<includes>
-												<include>**/*.log</include>
-												<include>*.log</include>
-											</includes>
-										</fileset>
-									</filesets>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>run</id>
-			<build>
-                <resources>
-                    <resource>
-                        <directory>jetty</directory>
-                        <includes>
-                            <include>jetty-env.xml</include>
-                        </includes>
-                    </resource>
-                </resources>
-				<plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-war-plugin</artifactId>
-                        <configuration>
-                            <webResources>
-                                <resource>
-                                    <directory>jetty</directory>
-                                    <targetPath>WEB-INF</targetPath>
-                                    <filtering>true</filtering>
-                                </resource>
-                            </webResources>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.mortbay.jetty</groupId>
-						<artifactId>maven-jetty-plugin</artifactId>
-						<version>6.1.21</version>
-						<executions>
-							<!-- Runs jetty when 'integration-test' phase is called -->
-							<execution>
-								<id>it</id>
-								<phase>integration-test</phase>
-								<goals>
-									<goal>run-exploded</goal>
-								</goals>
-								<configuration>
-									<contextPath>/${webapp.name}</contextPath>
-									<webApp>${project.build.directory}/${webapp.name}</webApp>
-									<scanIntervalSeconds>10</scanIntervalSeconds>
-									<connectors>
-										<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-											<port>8080</port>
-											<maxIdleTime>60000</maxIdleTime>
-										</connector>
-									</connectors>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-            <dependencies>
-                <dependency>
-                    <groupId>com.h2database</groupId>
-                    <artifactId>h2</artifactId>
-                    <version>1.3.158</version>
-                </dependency>
-                <dependency>
-                    <groupId>tk.skuro.alfresco</groupId>
-                    <artifactId>h2-support</artifactId>
-                    <version>1.2</version>
-                </dependency>
-            </dependencies>
-		</profile>
-	</profiles>
 </project>
