--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -38,7 +38,7 @@
     </pluginRepositories>
 
 	<properties>
-		<env>local</env>
+		<!--<env>local</env>-->
         <!--<alfresco.edition>community</alfresco.edition>-->
         <webapp.name>share</webapp.name>
 		<share.log.level>info</share.log.level>
@@ -77,9 +77,9 @@
 	<build>
         <finalName>${webapp.name}</finalName>
     <!-- Runtime properties file which is used to configure your Share instance. It's multi-environment aware (-Denv=yourEnv) -->
-		<filters>
-			<filter>${project.basedir}/src/main/properties/${env}/application.properties</filter>
-		</filters>
+		<!--<filters>-->
+			<!--<filter>${project.basedir}/src/main/properties/${env}/application.properties</filter>-->
+		<!--</filters>-->
 
 		<!--
 			Default profile to build as an Alfresco extension - resources are
@@ -146,9 +146,9 @@
                 <version>2.2</version>
 				<configuration>
 					<archiveClasses>false</archiveClasses>
-					<filters>
-						<filter>${project.basedir}/src/main/properties/${env}/application.properties</filter>
-					</filters>
+					<!--<filters>-->
+						<!--<filter>${project.basedir}/src/main/properties/${env}/application.properties</filter>-->
+					<!--</filters>-->
 					<webResources></webResources>
 				</configuration>
 			</plugin>
@@ -172,37 +172,5 @@
 	</build>
 	
 	<!-- Custom behaviors -->
-	<profiles>
-	  <!-- Invoke this with -Prun to run embedded jetty during your build -->
-		<profile>
-			<id>run</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.mortbay.jetty</groupId>
-						<artifactId>maven-jetty-plugin</artifactId>
-                        <version>6.1.21</version>
-						<configuration>
-							<connectors>
-								<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-									<port>${share.servlet.port}</port>
-								</connector>
-							</connectors>
-						</configuration>
-						<executions>
-						  <execution>
-						    <id>run-jetty</id>
-						    <phase>pre-integration-test</phase>
-						    <goals>
-						      <goal>run-exploded</goal>
-						    </goals>
-						  </execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-	</profiles>
 
 </project>
