изменено название модулей удалены лишние директории
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@38 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-experts/pom.xml
+++ b/lecm-experts/pom.xml
@@ -13,7 +13,7 @@
     <groupId>ru.it.lecm.experts</groupId>
     <artifactId>experts</artifactId>
     <packaging>pom</packaging>
-    <name>GetExperts</name>
+    <name>Experts Module</name>
 
     <modules>
         <module>repo</module>
