--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
         <alfresco.version>4.0.e</alfresco.version>
         <spring.version>3.0.5.RELEASE</spring.version>
         <platform.version>0.1.0</platform.version>
+        <buildNumber>1</buildNumber>
     </properties>
 
     <modules>
