--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -72,6 +72,13 @@
             <type>amp</type>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.forms.pentahoforms</groupId>
+            <artifactId>pentahoforms-share</artifactId>
+            <version>${platform.version}</version>
+            <type>amp</type>
+            <scope>runtime</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
