Измения в модуле "Поиск Экспертов" (fix) локализации (add) отображение на вкладке document-details
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@42 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-experts/share/src/main/java/ru/it/lecm/experts/form/get-experts.properties
+++ b/lecm-experts/share/src/main/java/ru/it/lecm/experts/form/get-experts.properties
@@ -1,4 +1,4 @@
-aspect.exp_hasExperts=Has Experts
+aspect.lecm-exp_hasExperts=Has Experts
 control.table.column.login.title=Login Name
 control.table.column.link.title=Link
 control.table.column.fullname.title=Full Name
