--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -127,8 +127,8 @@
             <type>amp</type>
         </dependency>
         <dependency>
-            <groupId>ru.it.lecm.forms.pentahoforms</groupId>
-            <artifactId>pentahoforms-repo</artifactId>
+            <groupId>ru.it.lecm.forms.jasperforms</groupId>
+            <artifactId>jasperforms-repo</artifactId>
             <version>${platform.version}</version>
             <scope>runtime</scope>
             <type>amp</type>
