--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -73,8 +73,8 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>ru.it.lecm.forms.pentahoforms</groupId>
-            <artifactId>pentahoforms-share</artifactId>
+            <groupId>ru.it.lecm.forms.jasperforms</groupId>
+            <artifactId>jasperforms-share</artifactId>
             <version>${platform.version}</version>
             <type>amp</type>
             <scope>runtime</scope>
