--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>jasperreports-maven-plugin</artifactId>
+                    <version>1.0-beta-2</version>
                     <configuration>
                         <sourceDirectory>${basedir}/src/main/config/reportdefinitions</sourceDirectory>
                         <outputDirectory>${project.build.outputDirectory}/config/reportdefinitions</outputDirectory>
