--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -133,6 +133,13 @@
             <scope>runtime</scope>
             <type>amp</type>
         </dependency>
+		<dependency>
+			<groupId>ru.it.lecm.dictionary</groupId>
+			<artifactId>dictionary-repo</artifactId>
+			<version>${platform.version}</version>
+			<scope>runtime</scope>
+			<type>amp</type>
+		</dependency>
 	</dependencies>
 
 	<build>
