Прописал модуль lecm-dictionary для maven.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@63 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
         <module>OrgStructure</module>
         <module>lecm-experts</module>
         <module>lecm-jasperreports-forms</module>
+	    <module>lecm-dictionary</module>
     </modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
