ALF-18 - Печатные формы (Генератор отчетов) убрана зависимость POI (уже имеется в alfresco.war)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@72 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
                 <groupId>net.sf.jasperreports</groupId>
                 <artifactId>jasperreports</artifactId>
                 <version>${jasperreports.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.poi</groupId>
+                        <artifactId>poi-ooxml</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <!--
                       Example Jar dependency: will be properly packed into the AMP /lib
