сжатие JS при помощи YUI Compressor
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@75 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/pom.xml
+++ b/lecm-dictionary/share/pom.xml
@@ -53,7 +53,11 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
-			<plugin>
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>yuicompressor-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
 				<groupId>org.alfresco.maven.plugin</groupId>
 				<artifactId>maven-amp-plugin</artifactId>
 			</plugin>
