--- a/pom.xml
+++ b/pom.xml
@@ -255,6 +255,33 @@
                         <target>1.6</target>
                     </configuration>
                 </plugin>
+<!--Java Script minification with YUI Compressor-->
+                <plugin>
+                    <groupId>net.alchim31.maven</groupId>
+                    <artifactId>yuicompressor-maven-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>compress</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <encoding>UTF-8</encoding>
+                        <linebreakpos>500</linebreakpos>
+                        <excludes>
+                            <exclude>**/site-webscripts/**/*.js</exclude>
+                        </excludes>
+                    </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.codehaus.plexus</groupId>
+                            <artifactId>plexus-utils</artifactId>
+                            <version>3.0</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>jasperreports-maven-plugin</artifactId>
