--- a/pom.xml
+++ b/pom.xml
@@ -253,6 +253,7 @@
                     <configuration>
                         <source>1.6</source>
                         <target>1.6</target>
+                        <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
 <!--Java Script minification with YUI Compressor-->
