ALF-42 - Просмотр иерархий и списков [+] добавлена генерация тестовых данных при первом обращении к странице [+] добавлен начальный вывод дерева иерархий
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@82 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/OrgStructure/repo/pom.xml
+++ b/OrgStructure/repo/pom.xml
@@ -47,8 +47,16 @@
    -->
     <dependencies>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.alfresco</groupId>
+            <artifactId>alfresco-data-model</artifactId>
         </dependency>
         <dependency>
             <groupId>org.alfresco</groupId>
