--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/dictionary.main.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/dictionary.main.get.properties
@@ -7,3 +7,4 @@ dictionary.append=Append
 dictionary.append.employee=Items
 dictionary.append.division=Dictionary
 dictionary.append.folder=Folder
+button.new-list=Add
