--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,12 @@
                 <version>${activiti.version}</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>xstream</groupId>
+                <artifactId>xstream</artifactId>
+                <version>1.2.2</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
