Справочник "Регионы" добавлен в сборку платформы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@110 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
         <module>lecm-experts</module>
         <module>lecm-jasperreports-forms</module>
 	    <module>lecm-dictionary</module>
+	    <module>lecm-dictionary-regions</module>
     </modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
