Добавлен drag and drop для дерева словарей
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@125 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/tree.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/tree.get.properties
@@ -8,3 +8,9 @@ dictionary.append.employee=Items
 dictionary.append.division=Dictionary
 dictionary.append.folder=Folder
 button.new-list=Add
+
+dictionary.message.moveFailure=Move failure
+dictionary.message.moveSuccess=Move success
+dictionary.button.move=Move
+dictionary.message.confirm.move.title=Move
+dictionary.message.confirm.move.description=Are you sure you want to move this item?
