--- a/OrgStructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/orgstructure.toolbar.get.properties
+++ b/OrgStructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/orgstructure.toolbar.get.properties
@@ -1,11 +1,9 @@
 button.new-row=New Item
-button.print=Print
-button.rss-feed=RSS Feed
 
 label.new-row.title=Create New Item
 
 message.new-row.success=Successfully added new item
-message.new-row.failure=Could not add new item to the Data List
+message.new-row.failure=Could not add new item to the Dictionary
 message.confirm.delete.title=Delete {0} Items
 message.confirm.delete.description=Are you sure you want to delete {0} items?
 message.delete.success=Successfully deleted {0} items
@@ -18,3 +16,10 @@ menu.selected-items=Selected Items...
 menu.selected-items.duplicate=Duplicate
 menu.selected-items.delete=Delete
 menu.selected-items.deselect-all=Deselect All
+
+button.new-unit=New Unit
+label.new-unit.title=Create New Unit
+message.new-unit.success=Successfully added new unit
+message.new-unit.failure=Could not add new unit
+
+message.select-unit.info=Please, select parent unit
