ALF-42 - Просмотр иерархий и списков [+] Новое свойство для состава подразделения
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@162 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/OrgStructure/repo/src/main/config/messages/orgstructure.properties
+++ b/OrgStructure/repo/src/main/config/messages/orgstructure.properties
@@ -167,8 +167,10 @@ lecm-orgstr_organizationStructure.association.lecm-orgstr_workforce-employee-ass
 
 lecm-orgstr_organizationStructure.type.lecm-orgstr_unit-composition.title=Unit Composition
 lecm-orgstr_organizationStructure.type.lecm-orgstr_unit-composition.description=Unit Composition
-lecm-orgstr_organizationStructure.property.lecm-orgstr_composition_is_boss.title=Is Boss
-lecm-orgstr_organizationStructure.property.lecm-orgstr_composition_is_boss.description=Is Boss
+lecm-orgstr_organizationStructure.property.lecm-orgstr_composition-is-boss.title=Is Boss
+lecm-orgstr_organizationStructure.property.lecm-orgstr_composition-is-boss.description=Is Boss
+lecm-orgstr_organizationStructure.property.lecm-orgstr_composition-is-primary.title=Is Mandatory
+lecm-orgstr_organizationStructure.property.lecm-orgstr_composition-is-primary.description=Is Mandatory
 lecm-orgstr_organizationStructure.association.lecm-orgstr_composition-position-assoc.title=Position
 lecm-orgstr_organizationStructure.association.lecm-orgstr_composition-position-assoc.description=Position
 lecm-orgstr_organizationStructure.association.lecm-orgstr_composition-employee-assoc.title=Employee
