--- a/lecm-calendar/share/pom.xml
+++ b/lecm-calendar/share/pom.xml
@@ -84,6 +84,14 @@
 					<exclude>**.java</exclude>
 				</excludes>
 			</resource>
+			<resource>
+				<filtering>true</filtering>
+				<directory>src/main/config</directory>
+				<targetPath>alfresco/module/${project.artifactId}</targetPath>
+				<excludes>
+					<exclude>**README-*</exclude>
+				</excludes>
+			</resource>
 		</resources>
 	</build>
 </project>
