ru.it.lecm.base добавлен в сборку сервера
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@170 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -113,6 +113,13 @@
 			<scope>provided</scope>
 		</dependency>
         <dependency>
+            <groupId>ru.it.lecm.base</groupId>
+            <artifactId>base-repo</artifactId>
+            <version>${platform.version}</version>
+            <scope>runtime</scope>
+            <type>amp</type>
+        </dependency>
+        <dependency>
             <groupId>ru.it.lecm.orgstructure</groupId>
             <artifactId>orgstructure-repo</artifactId>
             <version>${platform.version}</version>
