Добавленна версионность. Добавленна возможность просматривать версии при изменении зписи в справочнике.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@180 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid.get.properties
@@ -32,3 +32,5 @@ actions.view=View
 actions.edit=Edit
 actions.duplicate-row=Duplicate
 actions.delete-row=Delete
+version.preview=Preview Version
+actions.more=Preview Version
