ALF-42 - Просмотр иерархий и списков [+]Добавлены контролы для полей [+] Добавлено всплывающее меню к дереву [~]Другие исправления
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@190 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -1,2 +1,9 @@
-logicecm.orgstructure.employee.workplace=Workplace
-logicecm.orgstructure.employee.person=Account
+button.new-composition=New Composition
+button.new-workforce=New Workforce
+control.table.column.employee.title=Employee
+control.table.column.position.title=Position
+control.table.column.boss.title=Is Boss
+control.table.column.primary.title=Is Primary
+control.table.column.actions.title=Actions
+control.table.column.role.title=Role
+message.new-element.success=New element added
