Пример рабочего процесса для машины состояний
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@191 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/repo/pom.xml
+++ b/lecm-base/repo/pom.xml
@@ -49,6 +49,10 @@
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-data-model</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.extensions.surf</groupId>
+            <artifactId>spring-webscripts</artifactId>
+        </dependency>
 
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
