--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid.get.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid.get.properties
@@ -32,5 +32,5 @@ actions.view=View
 actions.edit=Edit
 actions.duplicate-row=Duplicate
 actions.delete-row=Delete
-version.preview=Preview Version
+actions.version=Preview Version
 actions.more=More
