генерация имени при сохранении Подразделения, Проекта и Сотрудника
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@217 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -7,3 +7,4 @@ control.table.column.primary.title=Is Primary
 control.table.column.actions.title=Actions
 control.table.column.role.title=Role
 message.new-element.success=New element added
+message.new-element.failure=New element added
