--- a/OrgStructure/repo/src/main/config/messages/orgstructure.properties
+++ b/OrgStructure/repo/src/main/config/messages/orgstructure.properties
@@ -176,6 +176,12 @@ lecm-orgstr_organizationStructure.association.lecm-orgstr_composition-position-a
 lecm-orgstr_organizationStructure.association.lecm-orgstr_composition-employee-assoc.title=Employee
 lecm-orgstr_organizationStructure.association.lecm-orgstr_composition-employee-assoc.description=Employee
 
+listcontstraint.lecm-orgstr_employee-sex-const.MALE=Male
+listcontstraint.lecm-orgstr_employee-sex-const.FEMALE=Female
+
+listcontstraint.lecm-orgstr_unit-type-const.SEPARATED=Separated
+listcontstraint.lecm-orgstr_unit-type-const.SEGREGATED=Segregated
+
 
 
 
